Reader: Correct minor alignment issues in Manage (#14529)
* Reader: Correct minor alignment issues in Manage

* Optimize for mobile first

* Align site dismiss in small breakpoint

* Move dimiss a bit to the right

--- a/client/blocks/reader-recommended-sites/style.scss
+++ b/client/blocks/reader-recommended-sites/style.scss
@@ -27,6 +27,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 		fill: lighten( $gray, 10% );
 		margin-right: 5px;
 		position: relative;
+			left: -2px;
 			top: 2px;
 	}
 }
@@ -85,13 +86,29 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	}
 
 	.reader-recommended-sites__recommended-site-dismiss {
+		align-items: flex-start;
 		display: flex;
 		height: 30px;
 		justify-content: flex-end;
 
 		.button.is-borderless {
+			padding: 0;
 			position: relative;
 			z-index: 0;
+			top: 5px;
+
+			@include breakpoint( ">660px" ) {
+				top: -2px;
+				right: -2px;
+			}
+
+			@media #{$reader-related-card-v2-breakpoint-medium}{
+				right: 0;
+			}
+
+			@media #{$reader-related-card-v2-breakpoint-small}{
+				top: 8px;
+			}
 		}
 
 		.button.is-borderless .gridicon,
@@ -100,15 +117,6 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 			fill: lighten( $gray, 10% );
 			width: 14px;
 			height: 14px;
-			top: -5px;
-
-			@media #{$reader-related-card-v2-breakpoint-medium} {
-				top: -2px;
-			}
-
-			@include breakpoint( "<660px" ) {
-				top: 3px;
-			}
 		}
 	}
 
