--- a/client/blocks/reader-subscription-list-item/style.scss
+++ b/client/blocks/reader-subscription-list-item/style.scss
@@ -57,6 +57,10 @@
 	min-width: 32px;
 }
 
+.reader-subscription-list-item .site-icon {
+	margin-top: 5px;
+}
+
 .reader-subscription-list-item {
 	display: flex;
 	font-size: 14px;
